--- a/revizoodle-client/src/assets/styles/boutonsAdele.css
+++ b/revizoodle-client/src/assets/styles/boutonsAdele.css
@@ -20,6 +20,13 @@
     outline: 0;
 }
 
+.bouton-selectionne {
+    color: #333;
+    border-color: #888;
+    outline: 0;
+    background-color: lightblue;
+}
+
 .bouton-retour {
     float: left;
     text-align: center;
@@ -57,6 +64,22 @@
     border-color: #27ae60;
     border-radius: 4px;
     border: 1px solid #bbb;
+    box-sizing: border-box;
+}
+
+.bouton-jaune {
+    display: inline-block;
+    padding: 10px 5px;
+    margin-bottom: 0.6rem;
+    color: #fff;
+    text-align: center;
+    font-size: small;
+    text-decoration: none;
+    background-color: gold;
+    border-color: gold;
+    border-radius: 4px;
+    border: 1px solid #bbb;
+    cursor: pointer;
     box-sizing: border-box;
 }
 
