--- a/revizoodle-client/src/assets/styles/boutonsAdele.css
+++ b/revizoodle-client/src/assets/styles/boutonsAdele.css
@@ -115,3 +115,9 @@
     cursor: pointer;
     box-sizing: border-box;
 }
+
+button[disabled] {
+    border-color: #ccc;
+    text-shadow:none;
+    color: #ccc;
+}
