--- a/revizoodle-server/app/views/index.html
+++ b/revizoodle-server/app/views/index.html
@@ -2,9 +2,9 @@
     extensions: ["tex2jax.js"],
     jax: ["input/TeX", "output/HTML-CSS"],
     tex2jax: {
-      inlineMath: [ ['$','$'], ["\\(","\\)"] ],
-      displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
-      processEscapes: true
+      inlineMath: [ ['$','$'] ],
+      displayMath: [ ['$$','$$'] ],
+      processEscapes: false
     },
     "HTML-CSS": { fonts: ["TeX"] }
-  });</script><script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-AMS_HTML"></script><link href="/css/app.365a331e.css" rel="preload" as="style"><link href="/js/app.7a974e8b.js" rel="preload" as="script"><link href="/js/chunk-vendors.ee8f6e97.js" rel="preload" as="script"><link href="/css/app.365a331e.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but revizoodle-client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.ee8f6e97.js"></script><script src="/js/app.7a974e8b.js"></script></body></html>
+  });</script><script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js"></script><link href="/css/app.390253ff.css" rel="preload" as="style"><link href="/js/app.0e9716b9.js" rel="preload" as="script"><link href="/js/chunk-vendors.cd941556.js" rel="preload" as="script"><link href="/css/app.390253ff.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but revizoodle-client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.cd941556.js"></script><script src="/js/app.0e9716b9.js"></script></body></html>
