--- a/revizoodle-server/app/views/index.html
+++ b/revizoodle-server/app/views/index.html
@@ -2,9 +2,9 @@
     extensions: ["tex2jax.js"],
     jax: ["input/TeX", "output/HTML-CSS"],
     tex2jax: {
-      inlineMath: [ ['$','$'] ],
-      displayMath: [ ['$$','$$'] ],
+      inlineMath: [ ['$$','$$'] ],
+      displayMath: [ ['$$$','$$$'] ],
       processEscapes: false
     },
     "HTML-CSS": { fonts: ["TeX"] }
-  });</script><script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js"></script><link href="/css/app.390253ff.css" rel="preload" as="style"><link href="/js/app.40cbee05.js" rel="preload" as="script"><link href="/js/chunk-vendors.59b6a535.js" rel="preload" as="script"><link href="/css/app.390253ff.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but revizoodle-client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.59b6a535.js"></script><script src="/js/app.40cbee05.js"></script></body></html>
+  });</script><script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js"></script><link href="/css/app.390253ff.css" rel="preload" as="style"><link href="/js/app.7dc7e6c3.js" rel="preload" as="script"><link href="/js/chunk-vendors.59b6a535.js" rel="preload" as="script"><link href="/css/app.390253ff.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but revizoodle-client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.59b6a535.js"></script><script src="/js/app.7dc7e6c3.js"></script></body></html>
