--- a/revizoodle-server/app/views/index.html
+++ b/revizoodle-server/app/views/index.html
@@ -1,20 +1,8 @@
-<!DOCTYPE html>
-<html lang="">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="icon" href="/favicon.ico">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
-          rel="stylesheet">
-    <title>revizoodle-client</title>
-    <script type="text/x-mathjax-config">MathJax.Hub.Config({
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet"><title>revizoodle-client</title><script type="text/x-mathjax-config">MathJax.Hub.Config({
     extensions: ["tex2jax.js", "mml2jax.js","asciimath2jax.js","MathMenu.js","MathZoom.js", "fast-preview.js", "AssistiveMML.js", "a11y/accessibility-menu.js"],
     jax: ["input/TeX", "output/HTML-CSS"],
     tex2jax: {
-      inlineMath: [ ['$$','$$'] ],
+      inlineMath: [ ['$$','$$'], ['\\(', '\\)'] ],
       displayMath: [ ['$$$','$$$'] ],
       processEscapes: false
     },
@@ -22,19 +10,4 @@
         extensions: ["AMSmath.js","AMSsymbols.js","noErrors.js","noUndefined.js"]
     },
     "HTML-CSS": { fonts: ["TeX"] }
-  });
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-AMS_CHTML"></script>
-    <link href="/css/app.954ea1d0.css" rel="preload" as="style">
-    <link href="/js/app.792e3c79.js" rel="preload" as="script">
-    <link href="/js/chunk-vendors.a4e251d1.js" rel="preload" as="script">
-    <link href="/css/app.954ea1d0.css" rel="stylesheet">
-</head>
-<body>
-<noscript><strong>We're sorry but revizoodle-client doesn't work properly without JavaScript enabled. Please enable it
-    to continue.</strong></noscript>
-<div id="app"></div>
-<script src="/js/chunk-vendors.a4e251d1.js"></script>
-<script src="/js/app.792e3c79.js"></script>
-</body>
-</html>
+  });</script><script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-AMS_CHTML"></script><link href="/css/app.954ea1d0.css" rel="preload" as="style"><link href="/js/app.374d9382.js" rel="preload" as="script"><link href="/js/chunk-vendors.a4e251d1.js" rel="preload" as="script"><link href="/css/app.954ea1d0.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but revizoodle-client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.a4e251d1.js"></script><script src="/js/app.374d9382.js"></script></body></html>
