--- a/revizoodle-server/app/views/index.html
+++ b/revizoodle-server/app/views/index.html
@@ -1,3 +1,41 @@
+<!--
+  ~ Copyright [name of the author when individual or of the
+  ~ legal entity when the software has been created under wage-earning status
+  ~ adding underneath, if so required :" contributor(s) : [name of the
+  ~ individuals] ([date of creation])
+  ~
+  ~ [e-mail of the author(s)]
+  ~
+  ~ This software is a computer program whose purpose is to [describe
+  ~ functionalities and technical features of your software].
+  ~
+  ~ This software is governed by the [CeCILL|CeCILL-B|CeCILL-C] license under French law and
+  ~ abiding by the rules of distribution of free software.  You can  use,
+  ~ modify and/ or redistribute the software under the terms of the [CeCILL|CeCILL-B|CeCILL-C]
+  ~ license as circulated by CEA, CNRS and INRIA at the following URL
+  ~ "http://www.cecill.info".
+  ~
+  ~ As a counterpart to the access to the source code and  rights to copy,
+  ~ modify and redistribute granted by the license, users are provided only
+  ~ with a limited warranty  and the software's author,  the holder of the
+  ~ economic rights,  and the successive licensors  have only  limited
+  ~ liability.
+  ~
+  ~ In this respect, the user's attention is drawn to the risks associated
+  ~ with loading,  using,  modifying and/or developing or reproducing the
+  ~ software by the user in light of its specific status of free software,
+  ~ that may mean  that it is complicated to manipulate,  and  that  also
+  ~ therefore means  that it is reserved for developers  and  experienced
+  ~ professionals having in-depth computer knowledge. Users are therefore
+  ~ encouraged to load and test the software's suitability as regards their
+  ~ requirements in conditions enabling the security of their systems and/or
+  ~ data to be ensured and,  more generally, to use and operate it in the
+  ~ same conditions as regards security.
+  ~
+  ~ The fact that you are presently reading this means that you have had
+  ~ knowledge of the CeCILL-B license and that you accept its terms.
+  -->
+
 <!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet"><title>revizoodle-client</title><script type="text/x-mathjax-config">MathJax.Hub.Config({
     extensions: ["tex2jax.js", "mml2jax.js","asciimath2jax.js","MathMenu.js","MathZoom.js", "fast-preview.js", "AssistiveMML.js", "a11y/accessibility-menu.js"],
     jax: ["input/TeX", "output/HTML-CSS"],
